@startuml

' Clases principales del proyecto
class ConexionBaseDatos {
    - static final String URL
    - static final String USUARIO
    - static final String CONTRASEÑA
    + static Connection getConnection(): Connection
}

class Contrato {
    - String nif
    - String empresa
    - String descripcion
    - String tipoContrato
    - String fecha
    - String precio
    + Contrato(String, String, String, String, String, String)
    + getNif(): String
    + getEmpresa(): String
    + getDescripcion(): String
    + getTipoContrato(): String
    + getFecha(): String
    + getPrecio(): String
    + setNif(String): void
    + setEmpresa(String): void
    + setDescripcion(String): void
    + setTipoContrato(String): void
    + setFecha(String): void
    + setPrecio(String): void
}

class ContratoAD {
    + boolean insertarContrato(Contrato): boolean
    + List<Contrato> encontrarTodo(): List<Contrato>
}

class ProcesadorContrato {
    + void proceso(String, String): void
    - List<Contrato> leerXML(String): List<Contrato>
    - void validarYAlmacenar(List<Contrato>): void
    - void generarXML(List<Contrato>, String): void
}

class LectorXML {
    + List<Contrato> leerXML(String): List<Contrato>
}

class EscritorXML {
    + void escribirXML(List<Contrato>, String): void
}

class Aplicacion {
    + static void main(String[]): void
}

' Clases para las pruebas
package "Test" {
    class ConexionBaseDatosTest {
        + void testConexionBaseDatos(): void
    }
    class ContratoTest {
        + void testGettersAndSetters(): void
    }
    class ContratoADTest {
        + void testInsertarContrato(): void
        + void testEncontrarTodo(): void
        + void testInsertarContratoNulo(): void
        + void testInsertarContratoDatosInvalidos(): void
    }
    class ProcesadorContratoTest {
        + void testLeerXML(): void
        + void testValidarYAlmacenar(): void
        + void testGenerarXML(): void
        + void testProcesoCompleto(): void
    }
    class LectorXMLTest {
        + void testLeerXML(): void
    }
    class EscritorXMLTest {
        + void testEscribirXML(): void
    }
}

' Relaciones entre clases principales
ContratoAD --> ConexionBaseDatos : utiliza
ProcesadorContrato --> ContratoAD : utiliza
ProcesadorContrato --> Contrato : gestiona
ProcesadorContrato --> LectorXML : utiliza
ProcesadorContrato --> EscritorXML : utiliza
LectorXML --> Contrato : devuelve
EscritorXML --> Contrato : utiliza
Aplicacion --> ProcesadorContrato : inicializa

' Relaciones de las clases de prueba
ConexionBaseDatosTest --> ConexionBaseDatos : prueba
ContratoTest --> Contrato : prueba
ContratoADTest --> ContratoAD : prueba
ProcesadorContratoTest --> ProcesadorContrato : prueba
LectorXMLTest --> LectorXML : prueba
EscritorXMLTest --> EscritorXML : prueba

@enduml
